# ChangeLog for dev-libs/nss
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.108 2007/12/23 12:11:30 armin76 Exp $

*nss-3.12_alpha2_p2-r1 (23 Dec 2007)

  23 Dec 2007; Raúl Porcel <armin76@gentoo.org> -nss-3.12_alpha2_p2.ebuild,
  +nss-3.12_alpha2_p2-r1.ebuild:
  fix MINOR_VERSION

  18 Dec 2007; Raúl Porcel <armin76@gentoo.org> -nss-3.11.5.ebuild:
  old

  17 Dec 2007; Stuart Longland <redhatter@gentoo.org> nss-3.11.5.ebuild,
  nss-3.11.7.ebuild:
  Mark 3.11.7 stable on MIPS, and fix some quoting issues in version 3.11.5

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> nss-3.11.7.ebuild,
  nss-3.12_alpha2_p2.ebuild:
  Quoting

*nss-3.12_alpha2_p2 (12 Dec 2007)

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> +nss-3.12_alpha2_p2.ebuild:
  Version bump

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> nss-3.11.5.ebuild,
  nss-3.11.7.ebuild:
  Drop app-arch/zip DEPEND, bug #195994

  15 Aug 2007; Christoph Mende <angelos@gentoo.org> nss-3.11.7.ebuild:
  Stable on amd64 wrt bug #188158

  14 Aug 2007; Markus Rothe <corsair@gentoo.org> nss-3.11.7.ebuild:
  Stable on ppc64; bug #188158

  13 Aug 2007; Jeroen Roovers <jer@gentoo.org> nss-3.11.7.ebuild:
  Stable for HPPA (bug #188158).

  09 Aug 2007; Raúl Porcel <armin76@gentoo.org> nss-3.11.7.ebuild:
  Fix description, bug 188230

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> nss-3.11.7.ebuild:
  Stable on sparc wrt #188158

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> nss-3.11.7.ebuild:
  ppc stable, bug #188158

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> nss-3.11.7.ebuild:
  Add utils USE-flag, bug #182896 and alpha/ia64/x86 stable wrt #188158

*nss-3.11.7 (08 Jul 2007)

  08 Jul 2007; Raúl Porcel <armin76@gentoo.org> +nss-3.11.7.ebuild:
  Version bump, and change license, bug #184599

  24 Jun 2007; Piotr Jaroszyński <peper@gentoo.org> nss-3.11.5.ebuild:
  (QA) Fix ${ROOT} abuse. bug #167271.
