@@ -1,3 +1,11 @@
+AUX 3.12-nss-config.in 2238 RMD160 b9dfeeef5319bae20326454a67dc67316dcd04cd SHA1 535ea4869d0f5fdc4f14b723320ef7284c14190a SHA256 57fb0219482981c80d9a72d8a86dfcbe0e776e4e5609fad8965e651f79296fa7
+MD5 99b1609eb56425f4ecafc6a0b457f83b files/3.12-nss-config.in 2238
+RMD160 b9dfeeef5319bae20326454a67dc67316dcd04cd files/3.12-nss-config.in 2238
+SHA256 57fb0219482981c80d9a72d8a86dfcbe0e776e4e5609fad8965e651f79296fa7 files/3.12-nss-config.in 2238
+AUX 3.12-nss.pc.in 269 RMD160 8716eb83ecf554c5751b0a135adeaf0a3a4208b0 SHA1 1a33aeb4131333d4cf4ccef7118533d0e89d7267 SHA256 cf659c5e72e560b79a928e7cdf5ed416b286f4eefa8d5b0cab50ee846b320e75
+MD5 33cb378486c19bd3ae4172c121fa7a15 files/3.12-nss.pc.in 269
+RMD160 8716eb83ecf554c5751b0a135adeaf0a3a4208b0 files/3.12-nss.pc.in 269
+SHA256 cf659c5e72e560b79a928e7cdf5ed416b286f4eefa8d5b0cab50ee846b320e75 files/3.12-nss.pc.in 269
 AUX nss-3.11-config-1.patch 1440 RMD160 052cc7d19eafaadec1cca6d9882f23265afdf8a7 SHA1 7a9153ec9bd099d2b1d42ab3de240201ae5d6004 SHA256 9a67bbbd9996535ac0aff115294c6537be5ba2efc99ae48c3bc92eb995e670bc
 MD5 12e4123fd9cc84264cc7ff25478b580f files/nss-3.11-config-1.patch 1440
 RMD160 052cc7d19eafaadec1cca6d9882f23265afdf8a7 files/nss-3.11-config-1.patch 1440
@@ -24,6 +32,7 @@ RMD160 8716eb83ecf554c5751b0a135adeaf0a3a4208b0 files/nss.pc.in 269
 SHA256 cf659c5e72e560b79a928e7cdf5ed416b286f4eefa8d5b0cab50ee846b320e75 files/nss.pc.in 269
 DIST nss-3.11.7.tar.gz 3731160 RMD160 5edec8f5d33e15ddba45b3d4fcfa3ca62628540c SHA1 501af41c4abc2300de2e5f90311583f47c19888c SHA256 e0cb80cbd08d677f9e73d19bbdedfd75fe931777ea732ec352dc1f133f999b98
 DIST nss-3.12_alpha2_p2.tar.bz2 3903174 RMD160 997c8daacdb5a3410ca3c23ce6d682345f392828 SHA1 291bddb0bbe3edd1fb473e0eaddfe51e26231810 SHA256 3bff7452b200623ec84a8c5dadf8283ff0af9f4705bc0fc92f505a618ad5c1a6
+DIST nss-3.12_beta1.tar.bz2 3904926 RMD160 fe0388d27299e7005346920f1d7f741117693511 SHA1 f861facec3e12f28f7a5b2d89cc3d6512d427376 SHA256 f1876a178b78db492d7e305c0b57d0dff0415d0ae0b2ac9324bfc5ff4a479e25
 EBUILD nss-3.11.7.ebuild 4123 RMD160 1095dd17d1d83076a5d89eadc12ff6e18c70991f SHA1 3401ba33406d51d94d2945cde6694c76eeb39c29 SHA256 0dd566e819e705eeba7063376e82ac4d227bcca63c76f30296a13f9afe2b87c0
 MD5 dbca4f5a7f362d3a29b1759a71fc3a48 nss-3.11.7.ebuild 4123
 RMD160 1095dd17d1d83076a5d89eadc12ff6e18c70991f nss-3.11.7.ebuild 4123
@@ -32,10 +41,14 @@ EBUILD nss-3.12_alpha2_p2-r1.ebuild 4110 RMD160 5094ee2906152a3668c21ced81db00bf
 MD5 2bc868a2de1cbbaf127ab69ca00fa2e5 nss-3.12_alpha2_p2-r1.ebuild 4110
 RMD160 5094ee2906152a3668c21ced81db00bf4a07838b nss-3.12_alpha2_p2-r1.ebuild 4110
 SHA256 674c21299fe784b450f310665d784c02850bae35a7886d4d47cff0e5e43be2eb nss-3.12_alpha2_p2-r1.ebuild 4110
-MISC ChangeLog 13097 RMD160 e3f96ef9623b752d933d3ae56f0cd652eb585d3c SHA1 2f83e32642777009f1ca66f939b739e8ec73045a SHA256 ab5a8025aa77cf93d0a96a28acb0f2890ff7bb2ea08ef750093382e2c42295e0
-MD5 eff3d89005d15a1871d1011f541c04b3 ChangeLog 13097
-RMD160 e3f96ef9623b752d933d3ae56f0cd652eb585d3c ChangeLog 13097
-SHA256 ab5a8025aa77cf93d0a96a28acb0f2890ff7bb2ea08ef750093382e2c42295e0 ChangeLog 13097
+EBUILD nss-3.12_beta1.ebuild 4113 RMD160 49d56eeb8c56f21f686f184a98bd57f16b7c58ef SHA1 c014588dffc5fc8f428663837a3f78a5bfc14e7e SHA256 820e7024ce3a63737e17c73594e1d181d8f62f0e13f013b56d1ba913ee14ecec
+MD5 aacfc88ef477fbc7febcf871f91c9cb1 nss-3.12_beta1.ebuild 4113
+RMD160 49d56eeb8c56f21f686f184a98bd57f16b7c58ef nss-3.12_beta1.ebuild 4113
+SHA256 820e7024ce3a63737e17c73594e1d181d8f62f0e13f013b56d1ba913ee14ecec nss-3.12_beta1.ebuild 4113
+MISC ChangeLog 13269 RMD160 5a5d219ee0b6482a2db40ff2fb7d237142d39669 SHA1 1a963dfe8e931dd016ca22942ce2a16034d470ee SHA256 eb7df9095db325f648480dc518e03ecaa66189be547539cecb7a0fd4d02048a2
+MD5 0f1ab063b9a903023fa0379ea71e110f ChangeLog 13269
+RMD160 5a5d219ee0b6482a2db40ff2fb7d237142d39669 ChangeLog 13269
+SHA256 eb7df9095db325f648480dc518e03ecaa66189be547539cecb7a0fd4d02048a2 ChangeLog 13269
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
@@ -46,3 +59,6 @@ SHA256 d67aca9b6034182af060c931905bb4ec4198bb769245bb787aa93c818cadedf0 files/di
 MD5 73218a66acae24d3958df48ef0330e18 files/digest-nss-3.12_alpha2_p2-r1 262
 RMD160 f3bd609acc20acd0ff918b2d4b2b37cda11acda6 files/digest-nss-3.12_alpha2_p2-r1 262
 SHA256 a36f1fb12fc05e8599588ef676db716c3a9c2f639a817b5590d4fc87303fa821 files/digest-nss-3.12_alpha2_p2-r1 262
+MD5 a2aa79c46eb272607b6bbe3ffc8d29d0 files/digest-nss-3.12_beta1 250
+RMD160 94046c781919f2c7ba905e0146f7658ce49ec90c files/digest-nss-3.12_beta1 250
+SHA256 e5e491c098f81b260a1e1e5156650c8a22ba87471d829193c2f0947506465839 files/digest-nss-3.12_beta1 250
