@@ -1,0 +1,3 @@
+MD5 b7585c6070a7ef8290f106a8a942fa55 nss-3.12_beta1.tar.bz2 3904926
+RMD160 fe0388d27299e7005346920f1d7f741117693511 nss-3.12_beta1.tar.bz2 3904926
+SHA256 f1876a178b78db492d7e305c0b57d0dff0415d0ae0b2ac9324bfc5ff4a479e25 nss-3.12_beta1.tar.bz2 3904926
