@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/nss
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.108 2007/12/23 12:11:30 armin76 Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.109 2008/01/18 21:42:42 armin76 Exp $
+
+*nss-3.12_beta1 (18 Jan 2008)
+
+  18 Jan 2008; Raúl Porcel <armin76@gentoo.org> +files/3.12-nss.pc.in,
+  +files/3.12-nss-config.in, +nss-3.12_beta1.ebuild:
+  Version bump
 
 *nss-3.12_alpha2_p2-r1 (23 Dec 2007)
 
